@@ -1,6 +1,7 @@
 2018-01-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added centralised file fetching method, resolves #5
+	* Adapted CharsetConverter utility to TYPO3 CMS 8
 
 2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
